--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.8.1",
     "heroicons": "^2.2.0",
     "inputmask": "^5.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/inputmask": "^5.0.7",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/validator": "^13.12.2",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
